# polynomial-solver

./: .gitignore  BUILD_CONFIGURATION.md  CMakeLists.txt  DUMP_FEATURE.md  INDEX.md  PARAMETERS.md  PORTABILITY.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  SETUP.md  SETUP_SUMMARY.md  TIER2_STATUS.md  VISUALIZATION_UPDATE.md  build.sh  check_prerequisites.sh  configure-help.sh  demo_parameters.sh  package.sh  switch_vscode_config.sh  test_all_configurations.sh  test_bernstein_conversion  test_bernstein_conversion.cpp  verify_solver.sh  visualize_ellipse_dump.py  visualize_graph_hull.py  visualize_strategies.py
cmake/: FindHighPrecision.cmake
docs/: 1d_root_refinement_results.md  ALGORITHMS.md  API_CONSISTENCY_GUIDE.md  BERNSTEIN_DIVISION_ALGORITHM.md  BERNSTEIN_OPERATIONS.md  CHECK_PREREQUISITES_UPDATE.md  COMPLETE_PICTURE.md  DEGENERATE_BOXES.md  DESIGN_SUMMARY.md  DETECTION_LIMITS.md  DIFFERENTIATION_IMPLEMENTATION.md  DIFFERENTIATION_INSIGHT.md  DIFFERENTIATION_SUMMARY.md  ERROR_BOUND_CONVERGENCE.md  EXACT_COEFFICIENT_DESIGN.md  EXECUTIVE_SUMMARY.md  FILE_STRUCTURE.md  GEOMETRY_ALGORITHMS.md  GEOMETRY_ROBUSTNESS.md  HIGH_PRECISION.md  HIGH_PRECISION_MINIMAL_DEPENDENCIES.md  HIGH_PRECISION_SETUP_GUIDE.md  IMPLEMENTATION_SUMMARY.md  MANUAL_FLAGS_SUMMARY.md  MANUAL_LIBRARY_CONTROL.md  MULTIPLICITY_DETECTION_COMPARISON.md  PARAMETERS.md  PHASE1_COMPLETE.md  PHASE1_UPDATE.md  POLYNOMIAL_DESIGN_SUMMARY.md  POWER_VS_BERNSTEIN_COMPARISON.md  PRECISION_REQUIREMENTS.md  QUICK_REFERENCE.md  README.md  REFACTORIZATION_PLAN.md  REFACTORIZATION_PROGRESS.md  REGION_TRACKING_DESIGN.md  REVISED_DESIGN.md  SUBDIVISION_DESIGN.md  TEMPLATED_SOLVER.md  (+24 more)
examples/: CMakeLists.txt  DEFLATION_RESULTS.md  Makefile  README.md  circle_ellipse_intersection.cpp  circle_ellipse_templated.cpp  cubic_1d_roots.cpp  deflation_test.cpp  deflation_test.py  example_region_tracking.cpp  high_precision_example.cpp  multiplicity_1d_roots.cpp  multiplicity_1d_templated.cpp  simple_cubic.cpp  simple_cubic_templated.cpp  test_modified_newton.py  visualize_circle_ellipse.py  visualize_cubic_1d.py  visualize_multiplicity_1d.py  visualize_wilkinson_1d.py  wilkinson_1d_roots.cpp  wilkinson_1d_templated.cpp
include/: config.h.in  de_casteljau.h  differentiation.h  differentiation_hp.h  geometry.h  high_precision_refiner.h  high_precision_types.h  interpolation.h  interval_arithmetic.h  polynomial.h  polynomial_hp.h  polynomial_solver.h  precision_context.h  precision_conversion.h  result_refiner.h  result_refiner_hp.h  solver.h
include/core/: de_casteljau.h  differentiation.h  geometry_base.h  geometry_impl.h  interpolation.h  interval_arithmetic.h  polynomial.h  polynomial_base.h  polynomial_impl.h
include/de_casteljau/: de_casteljau.h
include/geometry/: geometry.h
include/hp/: differentiation_hp.h  high_precision_refiner.h  high_precision_types.h  polynomial_hp.h  precision_context.h  precision_conversion.h  result_refiner_hp.h
include/polynomial/: polynomial.h
include/refinement/: result_refiner.h  result_refiner_base.h
include/solver/: bounding_strategy.h  bounding_strategy_impl.h  newton_multidim.h  solver.h  solver_base.h  solver_impl.h
playground/: HESSIAN_COMPUTATION.md  Makefile.in  README.md  compare_methods.py  hessian_zero_set.cpp  test_hessian_determinant.cpp  visualize_circle_boxes_2d.py  visualize_hessian_curve.py  visualize_hessian_det.py  visualize_hessian_high_precision.py  visualize_hessian_multi_threshold.py  visualize_refined_points.py
playground/docs/: 1D_POLYNOMIAL_WORKFLOW.md  CONDITIONING_AND_PRECISION.md  README.md  (+11 more)
python/: visualize.py  visualize_graph_from_test.py
src/: de_casteljau.cpp  differentiation.cpp  differentiation_hp.cpp  geometry.cpp  interpolation.cpp  interval_arithmetic.cpp  main.cpp  polynomial.cpp  polynomial_hp.cpp  precision_conversion.cpp  result_refiner.cpp  result_refiner_hp.cpp  solver.cpp
src/de_casteljau/: CMakeLists.txt  de_casteljau.cpp
src/geometry/: CMakeLists.txt  geometry.cpp
src/polynomial/: CMakeLists.txt  polynomial.cpp
src/solver/: CMakeLists.txt  main.cpp  solver.cpp
tests/: CMakeLists.txt  Makefile  test_2d_convex_hull_robust.cpp  test_2d_hull_vertex_order.cpp  test_2d_hyperplane_intersection.cpp  test_convergence_comparison.cpp  test_convergence_rate.cpp  test_degenerate_boxes.cpp  test_degree_zero_derivative.cpp  test_detection_limits.cpp  test_differentiation.cpp  test_differentiation_base.cpp  test_differentiation_debug.cpp  test_differentiation_hp.cpp  test_double_ostrowski.cpp  test_dual_representation.cpp  test_ellipse_dump.cpp  test_geometry_base.cpp  test_geometry_convex.cpp  test_high_multiplicity.cpp  test_high_precision_types.cpp  test_interval_arithmetic.cpp  test_linear_graph_hull.cpp  test_method_comparison.cpp  test_multidim.cpp  test_multiplicity_debug.cpp  test_multiplicity_methods.cpp  test_newton_multidim.cpp  test_polynomial_base.cpp  test_polynomial_base_comprehensive.cpp  test_polynomial_base_solver_compat.cpp  test_polynomial_conversion.cpp  test_polynomial_graph.cpp  test_polynomial_hp.cpp  test_polynomial_system.cpp  test_precision_escalation.cpp  test_precision_requirements.cpp  test_projected_polyhedral.cpp  test_region_tracking.cpp  test_result_refiner.cpp  (+7 more)
tools/: README.md  analyze_coefficient_norms.py  demo_result_refiner.cpp  refine_from_dumps.cpp  solver_viz_api.py  test_1d_refinement.cpp  test_direct_contraction_accuracy.py  test_direct_contraction_implementation.py  test_extreme_precision_direct_contraction.py  test_extreme_precision_examples.py  test_extreme_precision_roots.py  test_multiplicity_detection.cpp  test_numerical_stability.py  test_precision_accuracy_analysis.py  test_realistic_solver_errors.py  test_refiner_on_examples.py  test_refiner_wilkinson.cpp  test_rescaling_per_subdivision.py  test_result_refiner_demo.py  test_subdivision_error_accumulation.py  test_tolerance_sweep.py  test_ultimate_root_accuracy.py  test_wilkinson_extreme_precision.py  visualize_1d_solver.py  visualize_precision_results.py  visualize_roots_summary.py  visualize_single_poly_2d.py  visualize_solver.py
(+25 files in other folders)
