# Tests directory

add_executable(test_polynomial_conversion test_polynomial_conversion.cpp)
target_link_libraries(test_polynomial_conversion PRIVATE polynomial de_casteljau)
add_test(NAME PolynomialConversionTest COMMAND test_polynomial_conversion)

add_executable(test_polynomial_graph test_polynomial_graph.cpp)
target_link_libraries(test_polynomial_graph PRIVATE solver polynomial de_casteljau geometry)
add_test(NAME PolynomialGraphTest COMMAND test_polynomial_graph)

add_executable(test_polynomial_system test_polynomial_system.cpp)
target_link_libraries(test_polynomial_system PRIVATE solver polynomial de_casteljau geometry)
add_test(NAME PolynomialSystemExampleTest COMMAND test_polynomial_system)

add_executable(test_solver_subdivision test_solver_subdivision.cpp)
target_link_libraries(test_solver_subdivision PRIVATE solver polynomial de_casteljau geometry)
add_test(NAME SolverSubdivisionTest COMMAND test_solver_subdivision)
add_executable(test_geometry_convex test_geometry_convex.cpp)
target_link_libraries(test_geometry_convex PRIVATE geometry)
add_test(NAME GeometryConvexTest COMMAND test_geometry_convex)



message(STATUS "Tests directory configured (conversion, graph, and system tests enabled)")

